multiple births prototype WIP

--- a/app/views/births/multipleBirths/00-sign-in.html
+++ b/app/views/births/multipleBirths/00-sign-in.html
@@ -32,7 +32,7 @@
             Email address
         </label>
         <div id="event-name-hint" class="govuk-hint">
-        This is your work email address
+        This is your LRS email
         </div>
         <input class="govuk-input govuk-!-width-one-half" id="email" name="email" type="text" autocomplete="email">
       </div>
