--- a/app/views/births/multipleBirths/child2Details/01-child2-name-date.html
+++ b/app/views/births/multipleBirths/child2Details/01-child2-name-date.html
@@ -105,66 +105,63 @@ href: "javascript:window.history.back()"
           </div>
 
          
-      
-
-  <div class="govuk-form-group">
-    <fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-        Date and time of birth
-      </legend>
-      <div id="dob-hint" class="govuk-hint">
-        For example, 23 11 2024
-      </div>
-  
-      <!-- Date row -->
-      <div class="govuk-date-input govuk-!-margin-bottom-3" id="dob-date">
-        <div class="govuk-date-input__item">
           <div class="govuk-form-group">
-            <label class="govuk-label govuk-date-input__label" for="dob-day">Day</label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-day" name="dob-day" type="text" inputmode="numeric" value="1">
+            <fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                Date and time of birth
+              </legend>
+              <div id="dob-hint" class="govuk-hint">
+                For example, 23 11 2024
+              </div>
+          
+              <!-- Date row -->
+              <div class="govuk-date-input govuk-!-margin-bottom-3" id="dob-date">
+                <div class="govuk-date-input__item">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label govuk-date-input__label" for="dob-day">Day</label>
+                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-day" name="dob-day" type="text" inputmode="numeric" value="1">
+                  </div>
+                </div>
+                <div class="govuk-date-input__item">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label govuk-date-input__label" for="dob-month">Month</label>
+                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-month" name="dob-month" type="text" inputmode="numeric" value="10">
+                  </div>
+                </div>
+                <div class="govuk-date-input__item">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label govuk-date-input__label" for="dob-year">Year</label>
+                    <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="dob-year" name="dob-year" type="text" inputmode="numeric" value="2025">
+                  </div>
+                </div>
+              </div>
+          
+              <!-- Time row -->
+              <div class="govuk-date-input" id="dob-time">
+                <div class="govuk-date-input__item">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label govuk-date-input__label" for="dob-hour">Hours</label>
+                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-hour" name="dob-hour" type="text" inputmode="numeric" value="12">
+                  </div>
+                </div>
+                <div class="govuk-date-input__item">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label govuk-date-input__label" for="dob-minute">Minutes</label>
+                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-minute" name="dob-minute" type="text" inputmode="numeric" value="00">
+                  </div>
+                </div>
+                <div class="govuk-date-input__item">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label govuk-date-input__label" for="dob-period">am / pm</label>
+                    <select class="govuk-select" id="dob-period" name="dob-period">
+                      <option value="AM">pm</option>
+                      <option value="PM">am</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+            </fieldset>
           </div>
-        </div>
-        <div class="govuk-date-input__item">
-          <div class="govuk-form-group">
-            <label class="govuk-label govuk-date-input__label" for="dob-month">Month</label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-month" name="dob-month" type="text" inputmode="numeric" value="10">
-          </div>
-        </div>
-        <div class="govuk-date-input__item">
-          <div class="govuk-form-group">
-            <label class="govuk-label govuk-date-input__label" for="dob-year">Year</label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="dob-year" name="dob-year" type="text" inputmode="numeric" value="2025">
-          </div>
-        </div>
-      </div>
-  
-      <!-- Time row -->
-      <div class="govuk-date-input" id="dob-time">
-        <div class="govuk-date-input__item">
-          <div class="govuk-form-group">
-            <label class="govuk-label govuk-date-input__label" for="dob-hour">Hours</label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-hour" name="dob-hour" type="text" inputmode="numeric" value="10">
-          </div>
-        </div>
-        <div class="govuk-date-input__item">
-          <div class="govuk-form-group">
-            <label class="govuk-label govuk-date-input__label" for="dob-minute">Minutes</label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-minute" name="dob-minute" type="text" inputmode="numeric" value="48">
-          </div>
-        </div>
-        <div class="govuk-date-input__item">
-          <div class="govuk-form-group">
-            <label class="govuk-label govuk-date-input__label" for="dob-period">am / pm</label>
-            <select class="govuk-select govuk-input--width-8" id="dob-period" name="dob-period">
-              <option value="AM">am</option>
-              <option value="PM">pm</option>
-            </select>
-          </div>
-        </div>
-      </div>
-    </fieldset>
-  </div>
-  
 
 
 
