--- a/app/views/births/multipleBirths/submit/confirmation-page.html
+++ b/app/views/births/multipleBirths/submit/confirmation-page.html
@@ -11,7 +11,7 @@
 
       {{ govukPanel({
         titleText: "Registration complete",
-        html: "System reference number<br><strong>2851234333</strong>"
+        html: "System number 500248148"
       }) }}
 
       <br>
@@ -21,18 +21,35 @@
       </h2> 
 -->
       <p class="govuk-body">
-        You can now print the stillbirth certificate
+        You can now print the birth certificate.
       </p>
 
        <p  class="govuk-body govuk-!-margin-bottom-9">
         <a href="#">
-          Print the certificate
+          View and print standard certificate (opens in a new tab)
+        </a>
+        <br>
+        <br>
+        <a href="#">
+          View and print short certificate (opens in a new tab)
         </a>
       </p>
 
+      <h2 class="govuk-heading-m">
+        Do you want to register child 2?
+      </h2>
+      <p  class="govuk-body">
+        <a href="/births/multipleBirths/triageChild2/01-child2-who-is-informant.html">
+          Continue to register child 2
+        </a>
+      </p>
+
+      <br>
+      <br>
+
       <p  class="govuk-body">
         <a href="../../../01-life-event-home.html">
-          Go back to life events home
+          Return to homepage
         </a>
       </p>
 
