--- a/app/views/births/multipleBirths/triage/03-marital-status.html
+++ b/app/views/births/multipleBirths/triage/03-marital-status.html
@@ -51,7 +51,8 @@ href: "javascript:window.history.back()"
       }) }}
 
       {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      href: "/births/multipleBirths/triage/05-check-details.html"
       }) }}
 
     </form>
