--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,14 +11,19 @@
     <h1 class="govuk-heading-xl">
       Prototypes for births
     </h1>
- <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 4: Niamh, Kaisa or Wiktoria</p>
+ 
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Birth prototype</h2>
+    <p>
+      <h3 class="govuk-heading-s" style="display: inline;">Round 1</h3>
+      <strong class="govuk-tag govuk-tag--yellow">In progress</strong>
+    </p>
      
      <p class="govuk-body">
-       <a href="00-sign-in.html">Sign in page</a>
-     </p>
+      <a href="/births/multipleBirths/00-sign-in.html">Task 1</a> – Registering twins with same informant
+    </p>
+
+     <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 4: Niamh, Kaisa or Helen</p>
    </div>
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 </div>
