--- a/app/views/births/multipleBirths/00a-check-your-email.html
+++ b/app/views/births/multipleBirths/00a-check-your-email.html
@@ -18,7 +18,7 @@
 
 {{ govukBackLink({
   text: "Back",
-  href: "sign-in"
+  href: "/births/multipleBirths/00-sign-in"
 }) }}
 {% endblock %}
 
@@ -51,7 +51,7 @@
 
       {{ govukButton({
         text: "Sign in",
-        href: "births/multipleBirths/01-search"
+        href: "/births/multipleBirths/00-service-selector.html"
       }) }}
 
     </div>
