--- a/app/views/births/multipleBirths/01-search.html
+++ b/app/views/births/multipleBirths/01-search.html
@@ -38,7 +38,7 @@
       {% from "govuk/components/button/macro.njk" import govukButton %}
 
       {{ govukButton({
-        text: "Continue",
+        text: "Search",
         href: "02-child-correct"
       }) }}
 
