--- a/app/views/births/multipleBirths/02-child-correct.html
+++ b/app/views/births/multipleBirths/02-child-correct.html
@@ -38,7 +38,7 @@ href: "javascript:window.history.back()"
           Date and time of birth
         </dt>
         <dd class="govuk-summary-list__value">
-          1 January 2025 at 10:08am
+          1 October 2025 at 10:48am
         </dd>
         <dd class="govuk-summary-list__actions">
 
@@ -49,7 +49,7 @@ href: "javascript:window.history.back()"
           Sex
         </dt>
         <dd class="govuk-summary-list__value">
-          Female
+            Male
         </dd>
         <dd class="govuk-summary-list__actions">
         </dd>
@@ -59,7 +59,7 @@ href: "javascript:window.history.back()"
           Mother's first name
         </dt>
         <dd class="govuk-summary-list__value">
-          Sarah
+          Haley Jennifer
         </dd>
         <dd class="govuk-summary-list__actions">
       </div>
@@ -68,7 +68,7 @@ href: "javascript:window.history.back()"
           Mother's last name
         </dt>
         <dd class="govuk-summary-list__value">
-          Adams
+          MORA
         </dd>
         <dd class="govuk-summary-list__actions">
         </dd>
@@ -78,7 +78,7 @@ href: "javascript:window.history.back()"
           Place of birth
         </dt>
         <dd class="govuk-summary-list__value">
-          St Thomas&rsquo; Hospital
+          Princess Anne Hospital, Southampton
         </dd>
         <dd class="govuk-summary-list__actions">
         </dd>
@@ -104,7 +104,7 @@ href: "javascript:window.history.back()"
           Date and time of birth
         </dt>
         <dd class="govuk-summary-list__value">
-          1 January 2025 at 11:08am
+          1 October 2025 at 12:00pm
         </dd>
         <dd class="govuk-summary-list__actions">
 
@@ -125,7 +125,7 @@ href: "javascript:window.history.back()"
           Mother's first name
         </dt>
         <dd class="govuk-summary-list__value">
-          Sarah
+          Haley Jennifer
         </dd>
         <dd class="govuk-summary-list__actions">
       </div>
@@ -134,7 +134,7 @@ href: "javascript:window.history.back()"
           Mother's last name
         </dt>
         <dd class="govuk-summary-list__value">
-          Adams
+          MORA
         </dd>
         <dd class="govuk-summary-list__actions">
         </dd>
@@ -144,7 +144,7 @@ href: "javascript:window.history.back()"
           Place of birth
         </dt>
         <dd class="govuk-summary-list__value">
-          St Thomas&rsquo; Hospital
+          Princess Anne Hospital, Southampton
         </dd>
         <dd class="govuk-summary-list__actions">
 
@@ -156,7 +156,7 @@ href: "javascript:window.history.back()"
     name: "whichChild",
     fieldset: {
     legend: {
-    text: "Which one do you you want to register first?",
+    text: "Which child do you want to register first?",
     classes: "govuk-fieldset__legend--s"
     }
     },
@@ -173,12 +173,12 @@ href: "javascript:window.history.back()"
     }) }}
 
     {{ govukButton({
-    text: "Yes, continue",
+    text: "Continue",
     href: "triage/01-who-is-informant"
     }) }}
 
     <div class="govuk-form-group">
-      <p class="govuk-body"><a href="02-search.html" class="govuk-link">No, return to search</a></p>
+      <p class="govuk-body"><a href="02-search.html" class="govuk-link">Return to search</a></p>
     </div>
   </div>
 </div>
