--- a/app/views/births/multipleBirths/additionalInfo/comments.html
+++ b/app/views/births/multipleBirths/additionalInfo/comments.html
@@ -29,8 +29,17 @@ href: "javascript:window.history.back()"
           class="govuk-textarea govuk-!-margin-bottom-1"></textarea></div>
       <section aria-live="polite"
         class="govuk-body govuk-character-count__message govuk-!-margin-bottom-4 govuk-character-count__status"><span
-          class="govuk-hint">You have 500 characters remaining</span></section><button type="submit"
-        class="govuk-button govuk-!-margin-top-5" data-testid="submit-comments">Save and return</button>
+          class="govuk-hint">You have 500 characters remaining</span></section>
+          
+          <div class="govuk-button-group">
+            {{ govukButton({
+              text: "Save and return",
+              href: "javascript:window.history.back()"
+            })
+          }} 
+          </div>
+
+
     </form>
 
 </div>
