--- a/app/views/births/multipleBirths/childsDetails/02-place-of-birth.html
+++ b/app/views/births/multipleBirths/childsDetails/02-place-of-birth.html
@@ -27,46 +27,74 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <span class="govuk-caption-xl">Part 1 of 4: Child’s details</span>
+      <span class="govuk-caption-xl">Child 1 details</span>
       <h1 class="govuk-heading-xl">
        Place of birth
       </h1>
-        
-      <div class="govuk-form-group">
-        <form action="" method="get">
-        <label class="govuk-label" for="choose-country">Enter name or postcode where baby was born</label>
-        <div id="autocomple-hint" class="govuk-hint">
-              For example, EH3 4BD
-            </div>
-          <select class="govuk-select" name="choose-country" id="choose-country">
-            <option value="">Start typing here</option>
-            <option value="Chelsea and Westminster Hospital, 369 Fulham Rd., London SW10 9NH">Chelsea and Westminster Hospital, 369 Fulham Rd., London SW10 9NH</option>
-            <option value="Newham University Hospital, Glen Rd, London E13 8SL">Newham University Hospital, Glen Rd, London E13 8SL</option>
-            <option value="The Royal London Hospital, Whitechapel Rd, London E1 1FR">The Royal London Hospital, Whitechapel Rd, London E1 1FR</option>
-            <option value="United Lincolnshire Hospitals NHS Trust, 101 Manthorpe Rd, Grantham NG31 8DG">United Lincolnshire Hospitals NHS Trust, 101 Manthorpe Rd, Grantham NG31 8DG</option>
-            <option value="Manchester Royal Infirmary, Oxford Road, Manchester M13 9WL, United Kingdom">Manchester Royal Infirmary, Oxford Road, Manchester M13 9WL, United Kingdom</option>
-            <option value="St Bartholomew’s Hospital (Barts), West Smithfield, London EC1A 7BE, United Kingdom">St Bartholomew’s Hospital (Barts), West Smithfield, London EC1A 7BE, United Kingdom</option>
-            <option value="Guy’s and St Thomas’ NHS Foundation Trust, Westminster Bridge Road, London SE1 7EH, United Kingdom">Guy’s and St Thomas’ NHS Foundation Trust, Westminster Bridge Road, London SE1 7EH, United Kingdom</option>
-            <option value="Queen Elizabeth Hospital Birmingham, Mindelsohn Way, Birmingham B15 2GW, United Kingdom">Queen Elizabeth Hospital Birmingham, Mindelsohn Way, Birmingham B15 2GW, United Kingdom</option>
-            <option value="Addenbrooke’s Hospital, Hills Rd, Cambridge CB2 0QQ, United Kingdom">Addenbrooke’s Hospital, Hills Rd, Cambridge CB2 0QQ, United Kingdom</option>
-            <option value="University Hospital of Wales (UHW), Heath Park Way, Cardiff CF14 4XW, Wales">University Hospital of Wales (UHW), Heath Park Way, Cardiff CF14 4XW, Wales</option>
-            <option value="Morriston Hospital, Heol Maes Eglwys, Morriston, Swansea SA6 6NL, Wales">Morriston Hospital, Heol Maes Eglwys, Morriston, Swansea SA6 6NL, Wales</option>
-          </select>
-      </form>
-    
-       
-      </div>
 
-      <p class="govuk-body">
-        <a class="govuk-link" href="place-of-birth-manual.html">
-          I can’t find the address
-        </a>
-      </p>
+      <div class="govuk-form-group">
+        <div class="govuk-radios" data-module="govuk-radios">
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="communal" name="livingPlace" type="radio" value="communal">
+            <label class="govuk-label govuk-radios__label" for="communal">Communal establishment</label>
+          </div>
       
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="home" name="livingPlace" type="radio" value="home">
+            <label class="govuk-label govuk-radios__label" for="home">Home</label>
+          </div>
+      
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="transit" name="livingPlace" type="radio" value="transit">
+            <label class="govuk-label govuk-radios__label" for="transit">In transit</label>
+          </div>
+      
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="elsewhere" name="livingPlace" type="radio" value="elsewhere">
+            <label class="govuk-label govuk-radios__label" for="elsewhere">Elsewhere</label>
+          </div>
+        </div>
+      </div>
+      
+      <!-- Conditional reveal for 'Communal establishment' -->
+      <div id="address-field" class="govuk-form-group" hidden>
+       <br>
+        <h3 class="govuk-label govuk-label--s">What is the birthplace address?</h3>
+        <br>
+      
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="communal-name">Search by communal establishment name</label>
+          <input class="govuk-input govuk-!-width-two-thirds" id="communal-name" name="communal-name" type="text">
+        </div>
+      <br>
+        <p class="govuk-body">
+          <a href="#" class="govuk-link">Search by postcode</a>
+        </p>
+      
+        <p class="govuk-body">
+          <a href="#" class="govuk-link">Enter address manually</a>
+        </p>
+      </div>
+      
+      <script>
+        document.addEventListener('DOMContentLoaded', function () {
+          const radios = document.querySelectorAll('input[name="livingPlace"]');
+          const addressField = document.getElementById('address-field');
+      
+          radios.forEach(radio => {
+            radio.addEventListener('change', function () {
+              addressField.hidden = this.value !== 'communal';
+            });
+          });
+        });
+      </script>
+      
+      <br>
      
 
       {{ govukButton({
-        text: "Save and continue"
+        text: "Save and return",
+        href: "javascript:window.history.back()"
       }) }}
 
       
