--- a/app/views/births/multipleBirths/parentsDetails/fathers-name.html
+++ b/app/views/births/multipleBirths/parentsDetails/fathers-name.html
@@ -23,9 +23,9 @@ href: "javascript:window.history.back()"
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
- <span class="govuk-caption-l">Parent's details</span>
+ <span class="govuk-caption-l">Parents' details</span>
         <h1 class="govuk-heading-l">
-          Father's name
+          Father's names
         </h1>
 
         <form class="form" action="/births/v1/fathers-name-form" method="post">
@@ -36,13 +36,13 @@ href: "javascript:window.history.back()"
           <div id="yes-name-block" >
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-first-name" name="fathersFirstName"
+              <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="fathersFirstName"
                 type="text" value="{{data['fathersFirstName']}}">
             </div>
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-middle-name" name="fathersMiddleName"
+              <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="fathersMiddleName"
                 type="text" value="{{data['fathersMiddleName']}}">
               <!-- <p class="govuk-body">
                 <a href="#" class="govuk-link">Add more middle names</a>
@@ -51,7 +51,7 @@ href: "javascript:window.history.back()"
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-last-name" name="fathersLastName"
+              <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="fathersLastName"
                 type="text" value="{{data['fathersLastName']}}">
 
                  <p class="govuk-body  govuk-!-margin-top-4">
@@ -147,19 +147,69 @@ href: "javascript:window.history.back()"
 </div>
 
 
-            <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="name-order-hint">
-                <!-- <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                  Other known names (if available)
-                </legend> -->
-                <div class="govuk-form-group">
-                  <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                    Add other names
-                  </button>
-                </div>
-              </fieldset>
-            </div>
 
+            <!-- Hidden block that appears when button is clicked -->
+<div id="other-name-block" hidden>
+  <div class="govuk-!-display-flex govuk-!-justify-content-space-between govuk-!-margin-bottom-2">
+    <fieldset class="govuk-fieldset">
+      <div class="govuk-!-margin-bottom-2" style="display: flex; align-items: baseline; gap: 10px;">
+        <span class="govuk-fieldset__legend govuk-fieldset__legend--s">Other name 1</span>
+        <p class="govuk-body"><a href="#" class="govuk-link">Remove</a></p>
+      </div>
+    </fieldset>
+    <br>
+  </div>
+
+  <div class="govuk-form-group">
+    <fieldset class="govuk-fieldset">
+      <legend class="govuk-fieldset__legend">Type of name</legend>
+      <div class="govuk-radios" data-module="govuk-radios">
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="type1" name="nameType" type="radio" value="otherwise">
+          <label class="govuk-label govuk-radios__label" for="type1">Otherwise</label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="type2" name="nameType" type="radio" value="formerly">
+          <label class="govuk-label govuk-radios__label" for="type2">Formerly known as</label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="type3" name="nameType" type="radio" value="now">
+          <label class="govuk-label govuk-radios__label" for="type3">Now</label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="type4" name="nameType" type="radio" value="afterwards">
+          <label class="govuk-label govuk-radios__label" for="type4">Afterwards</label>
+        </div>
+      </div>
+    </fieldset>
+  </div>
+
+  <div class="govuk-form-group">
+    <label class="govuk-label govuk-label--s" for="first-name">First name</label>
+    <input class="govuk-input govuk-!-width-one-half" id="first-name" name="first-name" type="text">
+  </div>
+
+  <div class="govuk-form-group">
+    <label class="govuk-label govuk-label--s" for="middle-names">Middle names</label>
+    <input class="govuk-input govuk-!-width-one-half" id="middle-names" name="middle-names" type="text">
+  </div>
+
+  <div class="govuk-form-group">
+    <label class="govuk-label govuk-label--s" for="last-name">Last name</label>
+    <input class="govuk-input govuk-!-width-one-half" id="last-name" name="last-name" type="text">
+  </div>
+
+  <p class="govuk-body">
+    <a href="#" class="govuk-link">Add prefix or suffix</a>
+  </p>
+  <br>
+</div>
+
+<!-- Trigger button -->
+<button type="button" class="govuk-button govuk-button--secondary" onclick="document.getElementById('other-name-block').hidden = false;">
+  Add other names
+</button><br>
+<br>
 
 
           </div>
@@ -240,7 +290,8 @@ href: "javascript:window.history.back()"
 
           <div class="govuk-button-group">
             {{ govukButton({
-            text: "Save and return"
+            text: "Save and return",
+            href: "javascript:window.history.back()"
             }) }}
           </div>
 
