--- a/app/views/births/multipleBirths/parentsDetails/mothers-name.html
+++ b/app/views/births/multipleBirths/parentsDetails/mothers-name.html
@@ -25,7 +25,7 @@ href: "javascript:window.history.back()"
       <div class="govuk-grid-column-two-thirds">
  <span class="govuk-caption-l">Parent's details</span>
         <h1 class="govuk-heading-l">
-          Mother's name
+          Mother's names
         </h1>
 
         <form class="form" action="/births/v1/mothers-name-form" method="post">
@@ -36,14 +36,14 @@ href: "javascript:window.history.back()"
           <div id="yes-name-block" >
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-first-name" name="mothersFirstName"
-                type="text" value="{{data['mothersFirstName']}}">
+              <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="mothersFirstName"
+                type="text" value="Haley">
             </div>
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-middle-name" name="mothersMiddleName"
-                type="text" value="{{data['mothersMiddleName']}}">
+              <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="mothersMiddleName"
+                type="text" value="Jennifer">
               <!-- <p class="govuk-body">
                 <a href="#" class="govuk-link">Add more middle names</a>
               </p> -->
@@ -51,8 +51,8 @@ href: "javascript:window.history.back()"
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-last-name" name="mothersLastName"
-                type="text" value="{{data['mothersLastName']}}">
+              <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="mothersLastName"
+                type="text" value="MORA">
 
                  <p class="govuk-body  govuk-!-margin-top-4">
                 <a href="#" class="govuk-link">Add prefix or suffix</a>
@@ -74,11 +74,78 @@ href: "javascript:window.history.back()"
               </fieldset>
             </div> -->
 
+           
+            <!-- Hidden block that appears when button is clicked -->
+<div id="other-name-block" hidden>
+  <div class="govuk-!-display-flex govuk-!-justify-content-space-between govuk-!-margin-bottom-2">
+    <fieldset class="govuk-fieldset">
+      <div class="govuk-!-margin-bottom-2" style="display: flex; align-items: baseline; gap: 10px;">
+        <span class="govuk-fieldset__legend govuk-fieldset__legend--s">Other name 1</span>
+        <a href="#" class="govuk-link">Remove</a>
+      </div>
+    </fieldset>
+    <br>
+  </div>
+
+  <div class="govuk-form-group">
+    <fieldset class="govuk-fieldset">
+      <legend class="govuk-fieldset__legend">Type of name</legend>
+      <div class="govuk-radios" data-module="govuk-radios">
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="type1" name="nameType" type="radio" value="otherwise">
+          <label class="govuk-label govuk-radios__label" for="type1">Otherwise</label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="type2" name="nameType" type="radio" value="formerly">
+          <label class="govuk-label govuk-radios__label" for="type2">Formerly known as</label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="type3" name="nameType" type="radio" value="now">
+          <label class="govuk-label govuk-radios__label" for="type3">Now</label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="type4" name="nameType" type="radio" value="afterwards">
+          <label class="govuk-label govuk-radios__label" for="type4">Afterwards</label>
+        </div>
+      </div>
+    </fieldset>
+  </div>
+
+  <div class="govuk-form-group">
+    <label class="govuk-label govuk-label--s" for="first-name">First name</label>
+    <input class="govuk-input govuk-!-width-one-half" id="first-name" name="first-name" type="text">
+  </div>
+
+  <div class="govuk-form-group">
+    <label class="govuk-label govuk-label--s" for="middle-names">Middle names</label>
+    <input class="govuk-input govuk-!-width-one-half" id="middle-names" name="middle-names" type="text">
+  </div>
+
+  <div class="govuk-form-group">
+    <label class="govuk-label govuk-label--s" for="last-name">Last name</label>
+    <input class="govuk-input govuk-!-width-one-half" id="last-name" name="last-name" type="text">
+  </div>
+
+  <p class="govuk-body">
+    <a href="#" class="govuk-link">Add prefix or suffix</a>
+  </p>
+  <br>
+</div>
+
+<!-- Trigger button -->
+<button type="button" class="govuk-button govuk-button--secondary" onclick="document.getElementById('other-name-block').hidden = false;">
+  Add other names
+</button><br>
+<br>
+
+
+
+
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="prefix">
                 Maiden name
               </label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="mothersMaidenName" name="mothersMaidenName" type="text"
+              <input class="govuk-input govuk-!-width-one-half" id="mothersMaidenName" name="mothersMaidenName" type="text"
                 value="{{data['mothersMaidenName']}}">
             </div>
 
@@ -86,7 +153,7 @@ href: "javascript:window.history.back()"
               <label class="govuk-label govuk-label--s" for="suffix">
                 Last name at marriage (if different from maiden name)
               </label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="mothersLastMarriageName" name="mothersLastMarriageName" type="text"
+              <input class="govuk-input govuk-!-width-one-half" id="mothersLastMarriageName" name="mothersLastMarriageName" type="text"
                 value="{{data['mothersLastMarriageName']}}">
             </div>
 
@@ -234,7 +301,8 @@ href: "javascript:window.history.back()"
 
           <div class="govuk-button-group">
             {{ govukButton({
-            text: "Save and return"
+            text: "Save and return",
+            href: "javascript:window.history.back()"
             }) }}
           </div>
 
