--- a/app/views/births/multipleBirths/submit/register-page.html
+++ b/app/views/births/multipleBirths/submit/register-page.html
@@ -23,16 +23,16 @@ Select the registrar’s designation – {{ serviceName }} – GOV.UK Prototype 
         <div class="govuk-grid-column-two-thirds">
           <span class="govuk-caption-l">Submit the registration</span>
           <h1 class="govuk-heading-l">
-            Register page 
+            Registrar's details  
           </h1>
           <form class="form" action="/births/v1/register-page-form" method="post">
             
 
        <div class="govuk-form-group">
   <label class="govuk-label govuk-label--s" for="registrar-name">
-    Registrar's name
+    Registrar's full name
   </label>
-  <input class="govuk-input govuk-!-width-three-quarters" id="registrar-name" name="registrarName"
+  <input class="govuk-input govuk-!-width-one-half" value="Example name" id="registrar-name" name="registrarName"
          type="text" value="{{ data['registrarName'] }}">
 </div>
 
@@ -58,7 +58,7 @@ Select the registrar’s designation – {{ serviceName }} – GOV.UK Prototype 
         <input class="govuk-radios__input" id="designation-deputy-registrar" name="designationSelector"
                type="radio" value="DEPUTY_REGISTRAR">
         <label class="govuk-label govuk-radios__label" for="designation-deputy-registrar">
-          Deputy Registrar
+          Deputy registrar
         </label>
       </div>
 
@@ -67,7 +67,7 @@ Select the registrar’s designation – {{ serviceName }} – GOV.UK Prototype 
         <input class="govuk-radios__input" id="designation-interim-registrar" name="designationSelector"
                type="radio" value="INTERIM_REGISTRAR">
         <label class="govuk-label govuk-radios__label" for="designation-interim-registrar">
-          Interim Registrar
+          Interim registrar
         </label>
       </div>
 
@@ -76,7 +76,7 @@ Select the registrar’s designation – {{ serviceName }} – GOV.UK Prototype 
         <input class="govuk-radios__input" id="designation-interim-deputy-registrar" name="designationSelector"
                type="radio" value="INTERIM_DEPUTY_REGISTRAR">
         <label class="govuk-label govuk-radios__label" for="designation-interim-deputy-registrar">
-          Interim Deputy Registrar
+          Interim deputy registrar
         </label>
       </div>
     </div>
@@ -91,7 +91,8 @@ Select the registrar’s designation – {{ serviceName }} – GOV.UK Prototype 
   
             <div class="govuk-button-group">
               {{ govukButton({
-                text: "Save and return"
+                text: "Save and return",
+                href: "javascript:window.history.back()"
               }) }}
             </div>
   
