--- a/app/views/births/multipleBirths/tasks/child2index.html
+++ b/app/views/births/multipleBirths/tasks/child2index.html
@@ -11,22 +11,29 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 <div class="govuk-grid-row govuk-!-margin-bottom-6">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Birth registration</h1>
-
-
-
-
-   
-   
-
-
-  
-
-    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Child's details</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Child 2 details</h2>
     <ul class="govuk-task-list">
+      
+
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="child-details/name-date">
-            Name, sex and date of birth
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/child2Details/02-child2-place-of-birth.html">
+            Place of birth
+          </a>
+        </div>
+        <div class="govuk-task-list__status">
+          {% if data.placeCompleted %}
+          Completed
+          {% else %}
+          <strong class="govuk-tag govuk-tag--pink">Review</strong>
+          {% endif %}
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/child2Details/01-child2-name-date.html">
+            Name, date of birth and sex
           </a>
         </div>
         <div class="govuk-task-list__status">
@@ -37,43 +44,28 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           {% endif %}
         </div>
       </li>
-
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="child-details/place-of-stillbirth">
-            Place of birth
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          {% if data.placeCompleted %}
-          Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-          {% endif %}
-        </div>
-      </li>
     </ul>
 
-    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Parent's details</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Parents' details</h2>
      <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="parents-details/mothers-name">
-            Mother's name
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/parentsDetailsChild2/mothers-name-child2">
+            Mother's names
           </a>
         </div>
         <div class="govuk-task-list__status">
           {% if data.mothersNameCompleted %}
           Completed
           {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+          <strong class="govuk-tag govuk-tag--pink">Review</strong>
           {% endif %}
         </div>
       </li>
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="parents-details/mothers-details">
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/parentsDetailsChild2/mothers-details-child2">
             Mother's details
           </a>
         </div>
@@ -81,28 +73,28 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
            {% if data.mothersDetailsCompleted %}
           Completed
           {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+          <strong class="govuk-tag govuk-tag--pink">Review</strong>
           {% endif %}
         </div>
       </li>
        <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="parents-details/fathers-name">
-            Father's name
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/parentsDetailsChild2/fathers-name-child2">
+            Father's names
           </a>
         </div>
         <div class="govuk-task-list__status">
           {% if data.fathersNameCompleted %}
           Completed
           {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+          <strong class="govuk-tag govuk-tag--pink">Review</strong>
           {% endif %}
         </div>
       </li>
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="parents-details/fathers-details">
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/parentsDetailsChild2/fathers-details-child2">
             Father's details
           </a>
         </div>
@@ -110,7 +102,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
            {% if data.fathersDetailsCompleted %}
           Completed
           {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+          <strong class="govuk-tag govuk-tag--pink">Review</strong>
           {% endif %}
         </div>
       </li>
@@ -120,7 +112,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
      <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="stats/confidential">
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/statsChild2/confidentialChild2.html">
             Confidential statistics
           </a>
         </div>
@@ -128,14 +120,14 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           {% if data.statsConfidentialCompleted %}
           Completed
           {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+          <strong class="govuk-tag govuk-tag--pink">Review</strong>
           {% endif %}
         </div>
       </li>
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="stats/voluntary">
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/statsChild2/voluntaryChild2">
             Voluntary statistics
           </a>
         </div>
@@ -143,25 +135,21 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
            {% if data.statsVoluntaryCompleted %}
           Completed
           {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+          <strong class="govuk-tag govuk-tag--pink">Review</strong>
           {% endif %}
         </div>
       </li>
       </ul>
 
-      <h2 class="govuk-heading-m">Registrar's comments </h2>
+      <h2 class="govuk-heading-m">Additional information</h2>
        <ul class="govuk-task-list">
          <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="supporting-info/comments">
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/additionalInfoChild2/commentsChild2">
             Comments</a> 
         </div>
         <div class="govuk-task-list__status">
-          {% if data.commentsCompleted %}
-          Entered
-          {% else %}
             <strong class="govuk-tag govuk-tag--yellow">Optional</strong>
-          {% endif %}
         </div>
       </li>
        </ul>
@@ -175,7 +163,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
             Registrar's details
           </div>
            {% else %}
- <a class="govuk-link govuk-task-list__link" href="submit/register-page">
+ <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/submitChild2/register-page-child2">
             Registrar's details
           </a>
            {% endif %}
@@ -200,7 +188,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
             Check your answers
           </div>
            {% else %}
- <a class="govuk-link govuk-task-list__link" href="submit/check-answers-page">
+ <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/submitChild2/check-answers-page-child2">
             Check your answers
           </a>
            {% endif %}
@@ -217,15 +205,11 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
         </div>
       </li>
     </ul>
-  
-
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <p><a href="#" class="govuk-link">Change record details</a></p>
     <p><a href="#" class="govuk-link" style="color: #d4351c;">Delete record</a></p>
-
     </div>
 </div>
 {% endblock %}
