--- a/app/views/births/multipleBirths/triageChild2/01-child2-who-is-informant.html
+++ b/app/views/births/multipleBirths/triageChild2/01-child2-who-is-informant.html
@@ -6,7 +6,7 @@ Question page template – {{ serviceName }} – GOV.UK Prototype Kit
 
 {% block beforeContent %}
 {{ govukBackLink({
-text: "Back",
+text: "Back to record",
 href: "javascript:window.history.back()"
 }) }}
 {% endblock %}
@@ -70,7 +70,8 @@ href: "javascript:window.history.back()"
       ]
       }) }}
       {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      href: "/births/multipleBirths/triageChild2/05-child2-check-details.html"
       }) }}
 
     </form>
